# api/docs/swagger.json
@@ -37,6 +37,18 @@
                         "schema": {
                             "$ref": "#/definitions/dtos.GetScanResultListResp"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.Error"
+                        }
                     }
                 }
             },
@@ -68,6 +80,18 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/dtos.CreateScanResultResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.Error"
                         }
                     }
                 }
@@ -101,6 +125,18 @@
                         "schema": {
                             "$ref": "#/definitions/dtos.GetScanResultDetailResp"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.Error"
+                        }
                     }
                 }
             },
@@ -130,6 +166,18 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/dtos.DeleteScanResultResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.Error"
                         }
                     }
                 }
@@ -169,6 +217,18 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/dtos.UpdateScanResultResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.Error"
                         }
                     }
                 }
@@ -215,6 +275,17 @@
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "dtos.Error": {
+            "type": "object",
+            "properties": {
+                "error_message": {
+                    "type": "string"
+                },
+                "status_code": {
+                    "type": "integer"
                 }
             }
         },
@@ -290,6 +361,9 @@
         },
         "dtos.UpdateScanResultDto": {
             "type": "object",
+            "required": [
+                "id"
+            ],
             "properties": {
                 "findings": {
                     "type": "array",
