# api/dtos/response.go
@@ -1,8 +1,6 @@
 package dtos
 
 import (
-	"net/http"
-
 	"github.com/gin-gonic/gin"
 )
 
@@ -13,6 +11,11 @@ type Response struct {
 	StatusCode int         `json:"status_code,omitempty"`
 }
 
+type Error struct {
+	ErrorMsg   string `json:"error_message,omitempty"`
+	StatusCode int    `json:"status_code,omitempty"`
+}
+
 func HttpResponse(c *gin.Context, res Response) {
 	c.JSON(res.StatusCode, gin.H{
 		"status_code": res.StatusCode,
@@ -21,17 +24,9 @@ func HttpResponse(c *gin.Context, res Response) {
 	})
 }
 
-func ErrorResponse(c *gin.Context, res Response) {
+func ErrorResponse(c *gin.Context, res Error) {
 	c.JSON(res.StatusCode, gin.H{
 		"status_code": res.StatusCode,
-		"data":        res.Data,
-		"error":       res.ErrorMsg,
-	})
-}
-
-func BadRequest(c *gin.Context, res Response) {
-	c.JSON(http.StatusBadRequest, gin.H{
-		"status_code": http.StatusBadRequest,
 		"error":       res.ErrorMsg,
 	})
 }
